@@ -5,7 +5,6 @@
 	actually use that return value to display an error if there was one.
 + Redo Preferences dialog.
 + Clean up the code and indent it properly.
-+ Fix conflict with copying of multimedia content.
 + Add "Edit" and "Remove" buttons to the search window and rename
 	it to "Manage Clipboard".
 + Move all pop-up and menu functions from main.c to menus.c.
